// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel macro macros boot: boot 1`] = `
"
import {assignImportedComponents, lazy} from \\"../macro\\";
assignImportedComponents([() => import('./a')]);
lazy(() => import('./a'));

      ↓ ↓ ↓ ↓ ↓ ↓

function _interopRequireWildcard(obj) {
  if (obj && obj.__esModule) {
    return obj;
  } else {
    var newObj = {};
    if (obj != null) {
      for (var key in obj) {
        if (Object.prototype.hasOwnProperty.call(obj, key)) {
          var desc =
            Object.defineProperty && Object.getOwnPropertyDescriptor
              ? Object.getOwnPropertyDescriptor(obj, key)
              : {};
          if (desc.get || desc.set) {
            Object.defineProperty(newObj, key, desc);
          } else {
            newObj[key] = obj[key];
          }
        }
      }
    }
    newObj.default = obj;
    return newObj;
  }
}

var importedWrapper = require(\\"react-imported-component/wrapper\\");

import { lazy } from \\"react-imported-component\\";
import { assignImportedComponents } from \\"react-imported-component/boot\\";
assignImportedComponents([
  () =>
    importedWrapper(
      \\"imported_-mg71kn_component\\",
      Promise.resolve().then(() => _interopRequireWildcard(require(\\"./a\\")))
    ),
]);
lazy(() =>
  importedWrapper(
    \\"imported_-mg71kn_component\\",
    Promise.resolve().then(() => _interopRequireWildcard(require(\\"./a\\")))
  )
);

"
`;

exports[`babel macro macros flat import: flat import 1`] = `
"
import \\"../macro\\";
      import('./a.js')

      ↓ ↓ ↓ ↓ ↓ ↓

function _interopRequireWildcard(obj) {
  if (obj && obj.__esModule) {
    return obj;
  } else {
    var newObj = {};
    if (obj != null) {
      for (var key in obj) {
        if (Object.prototype.hasOwnProperty.call(obj, key)) {
          var desc =
            Object.defineProperty && Object.getOwnPropertyDescriptor
              ? Object.getOwnPropertyDescriptor(obj, key)
              : {};
          if (desc.get || desc.set) {
            Object.defineProperty(newObj, key, desc);
          } else {
            newObj[key] = obj[key];
          }
        }
      }
    }
    newObj.default = obj;
    return newObj;
  }
}

var importedWrapper = require(\\"react-imported-component/wrapper\\");

importedWrapper(
  \\"imported_-1ko6oiq_component\\",
  Promise.resolve().then(() => _interopRequireWildcard(require(\\"./a.js\\")))
);

"
`;

exports[`babel macro macros lazy: lazy 1`] = `
"
import {lazy} from \\"../macro\\";
const v = lazy(() => import('./a'));

      ↓ ↓ ↓ ↓ ↓ ↓

function _interopRequireWildcard(obj) {
  if (obj && obj.__esModule) {
    return obj;
  } else {
    var newObj = {};
    if (obj != null) {
      for (var key in obj) {
        if (Object.prototype.hasOwnProperty.call(obj, key)) {
          var desc =
            Object.defineProperty && Object.getOwnPropertyDescriptor
              ? Object.getOwnPropertyDescriptor(obj, key)
              : {};
          if (desc.get || desc.set) {
            Object.defineProperty(newObj, key, desc);
          } else {
            newObj[key] = obj[key];
          }
        }
      }
    }
    newObj.default = obj;
    return newObj;
  }
}

var importedWrapper = require(\\"react-imported-component/wrapper\\");

import { lazy } from \\"react-imported-component\\";
const v = lazy(() =>
  importedWrapper(
    \\"imported_-mg71kn_component\\",
    Promise.resolve().then(() => _interopRequireWildcard(require(\\"./a\\")))
  )
);

"
`;

exports[`babel macro macros many: many 1`] = `
"
import {imported, useImported} from \\"../macro\\";        
const v = imported(() => import('./a'));
const x = () => useImported(() => import('./b'));

      ↓ ↓ ↓ ↓ ↓ ↓

function _interopRequireWildcard(obj) {
  if (obj && obj.__esModule) {
    return obj;
  } else {
    var newObj = {};
    if (obj != null) {
      for (var key in obj) {
        if (Object.prototype.hasOwnProperty.call(obj, key)) {
          var desc =
            Object.defineProperty && Object.getOwnPropertyDescriptor
              ? Object.getOwnPropertyDescriptor(obj, key)
              : {};
          if (desc.get || desc.set) {
            Object.defineProperty(newObj, key, desc);
          } else {
            newObj[key] = obj[key];
          }
        }
      }
    }
    newObj.default = obj;
    return newObj;
  }
}

var importedWrapper = require(\\"react-imported-component/wrapper\\");

import { imported, useImported } from \\"react-imported-component\\";
const v = imported(() =>
  importedWrapper(
    \\"imported_-mg71kn_component\\",
    Promise.resolve().then(() => _interopRequireWildcard(require(\\"./a\\")))
  )
);

const x = () =>
  useImported(() =>
    importedWrapper(
      \\"imported_15vaa6j_component\\",
      Promise.resolve().then(() => _interopRequireWildcard(require(\\"./b\\")))
    )
  );

"
`;

exports[`babel macro macros no usage: no usage 1`] = `
"
import {lazy} from \\"../macro\\";

      ↓ ↓ ↓ ↓ ↓ ↓

import { lazy } from \\"react-imported-component\\";

"
`;

exports[`babel macro macros nothing: nothing 1`] = `
"
const a = 42;

      ↓ ↓ ↓ ↓ ↓ ↓

const a = 42;

"
`;

exports[`babel macro macros plugin combination: plugin combination 1`] = `
"
import {imported, useImported} from \\"../macro\\";        
const v = imported(() => import('./a'));
const x = () => useImported(() => import('./b'));

      ↓ ↓ ↓ ↓ ↓ ↓

var importedWrapper = require(\\"react-imported-component/wrapper\\");

function _interopRequireWildcard(obj) {
  if (obj && obj.__esModule) {
    return obj;
  } else {
    var newObj = {};
    if (obj != null) {
      for (var key in obj) {
        if (Object.prototype.hasOwnProperty.call(obj, key)) {
          var desc =
            Object.defineProperty && Object.getOwnPropertyDescriptor
              ? Object.getOwnPropertyDescriptor(obj, key)
              : {};
          if (desc.get || desc.set) {
            Object.defineProperty(newObj, key, desc);
          } else {
            newObj[key] = obj[key];
          }
        }
      }
    }
    newObj.default = obj;
    return newObj;
  }
}

var importedWrapper = require(\\"react-imported-component/wrapper\\");

import { imported, useImported } from \\"react-imported-component\\";
const v = imported(() =>
  importedWrapper(
    \\"imported_-mg71kn_component\\",
    importedWrapper(
      \\"imported_-mg71kn_component\\",
      Promise.resolve().then(() => _interopRequireWildcard(require(\\"./a\\")))
    )
  )
);

const x = () =>
  useImported(() =>
    importedWrapper(
      \\"imported_15vaa6j_component\\",
      importedWrapper(
        \\"imported_15vaa6j_component\\",
        Promise.resolve().then(() => _interopRequireWildcard(require(\\"./b\\")))
      )
    )
  );

"
`;
